--- a/BlogSite/Views/Shared/_Layout.cshtml
+++ b/BlogSite/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <div class="container">
                     <div class="basic-wrapper">
                         <a class="btn responsive-menu pull-right" data-toggle="collapse" data-target=".navbar-collapse"><i></i></a>
-                        <div class="navbar-brand"><a href="index.html"><img src="/Content/style/images/logo.png" alt="" data-src="/Content/style/images/logo.png" data-ret="style/images/logo@2x.png" class="retina" /></a></div>
+                        <div class="navbar-brand"><a href="index.html"><img src="/Content/style/images/logo.png" alt="" /></a></div>
                     </div>
                     <nav class="collapse navbar-collapse pull-right">
                         <ul class="nav navbar-nav">
