--- a/BlogSite/Views/Shared/AboutSite.cshtml
+++ b/BlogSite/Views/Shared/AboutSite.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="sidebox widget">
-    <h3 class="widget-title section-title">Elsewhere</h3>
+    <h3 class="widget-title section-title">Blog Site</h3>
     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus.</p>
     <ul class="social">
         <li><a href="#"><i class="icon-s-rss"></i></a></li>
