--- a/BlogSite/Views/Tag/TagWidget.cshtml
+++ b/BlogSite/Views/Tag/TagWidget.cshtml
@@ -5,7 +5,7 @@
     <ul class="tag-list">
        @foreach (BlogSite.Models.Tag tag in Model)
        {
-        <li><a href="#">@tag.Name (@tag.Journals.Count)</a></li>
+        <li><a href="/Tag/Index/@tag.TagId">@tag.Name (@tag.Journals.Count)</a></li>
        }
      
     </ul>
